--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://avatars.githubusercontent.com/u/36686900?v=4
+avatar: assets\img\profile_pic\avatar.jpg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
